--- a/2nd/index.css
+++ b/2nd/index.css
@@ -1,10 +1,93 @@
-#type{
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 300px;
-    height: 40px;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
 }
-#type:focus{
-    border: 1px solid red;
-    outline: 1px solid red;
+.item-container {
+    width: 240px;
+}
+
+.container {
+    border: 1px solid black;
+    height: 720px;
+    width: 1200px;
+    padding: 5px;
+    display: flex;
+    text-align: center;
+    gap: 10px;
+    
+}
+.heading-container {
+    background-color: black;
+    color: white;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+.jhamela-grp {
+    padding-right: 10px;
+    height: 320px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.jhamela-grp .img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.jhamela-grp:nth-child(3) {
+    background-color: lightgray ;
+}
+
+.buttons {
+    display: flex;
+    gap: 20px;
+}
+
+button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button[type="Update"] {
+    background-color: skyblue;
+    color: white;
+}
+
+button[type="Delete"] {
+    background-color: lightcoral;
+    color: white;
+}
+
+.btn-create {
+    margin-top: 20px;
+}
+button[type="Create New Tourist Place"] {
+    background-color: skyblue;
+    font-size: large;
+    color: white;
+    padding: 5px 10px 5px 10px;
+}
+
+.search-type {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: start;
+}
+
+.search-holder {
+    margin-top: 20px;
+    width: 500px;
+    height: 30px;
+    border-radius: 10px;
+    padding: 10px;
 }
